# rcppoctave

pkg/: .Rbuildignore  DESCRIPTION  NAMESPACE  NEWS  configure  configure.in
pkg/R/: Octave-class.R  OctaveFunction-class.R  base-functions.R  devutils.R  eval.R  interface.R  package.R  random.R  utils.R
pkg/demo/: 00Index  Kalman.R  OOIndex  gamma.R  gibbs.R  timerng.R
pkg/inst/: REFERENCES.bib
pkg/inst/doc/: Makefile  RcppOctave-unitTests.Rnw
pkg/inst/doc/unitTests/: RcppOctave-unitTests.R  RcppOctave-unitTests.Rnw  doUnit.R
pkg/inst/unitTests/: runit.eval.R
pkg/man/: Octave-class.Rd  OctaveConfig.Rd  OctaveFunction-class.Rd  OctaveInterface.Rd  RcppOctave-package.Rd  check.equal.Rd  compile_src.Rd  devutils.Rd  dot-CallOctave.Rd  mfiles.Rd  o_addpath.Rd  o_assign.Rd  o_clear.Rd  o_eval.Rd  o_help.Rd  o_identity.Rd  o_load.Rd  o_rexp.Rd  o_rgamma.Rd  o_rnorm.Rd  o_runif.Rd  o_set.seed.Rd  o_source.Rd  o_version.Rd  o_who.Rd  o_whos.Rd  octave-ll.Rd  sourceExamples.Rd  write.bib.Rd  xxxCallOctave.Rd
pkg/man-roxygen/: OctaveDoc.R
pkg/src/: Makevars  Makevars.in  Makevars.win  conversion.cpp  rcpp_octave.cpp  rcpp_octave.h
pkg/src/modules/: Makefile  Makefile.in  PKG_ADD  Rrng.cc  Rrng.oct  configure  libRrng.c  libRrng.h  utils.cc  utils.oct
pkg/tests/: doRUnit.R
pkg/vignettes/: EddelbuettelGaujoux.tex  Makefile  RJwrapper.Rnw  RJwrapper.tex  RcppOctave-unitTests.Rnw  RcppOctave-unitTests.tex  RcppOctave.Rnw  RcppOctave.tex  Rpackages.bib  cleveref.sty
pkg/vignettes/cache/RJwrapper/: __packages  rngGammaR_f04d81b8abae4da413d11ce29467d2e0.RData  rngGammaR_f04d81b8abae4da413d11ce29467d2e0.rdb  rngGammaR_f04d81b8abae4da413d11ce29467d2e0.rdx  rngGamma_4d322f490c7cbc53a873b87c56ceedb3.RData  rngGamma_4d322f490c7cbc53a873b87c56ceedb3.rdb  rngGamma_4d322f490c7cbc53a873b87c56ceedb3.rdx  rng_3517a3f113e5a80d1aeab9a4ac146e6f.RData  rng_3517a3f113e5a80d1aeab9a4ac146e6f.rdb  rng_3517a3f113e5a80d1aeab9a4ac146e6f.rdx  rng_68166c95b41850c1fff32fd457647e71.RData  rng_68166c95b41850c1fff32fd457647e71.rdx  rng_a42f6c9367113846cb25ae3b6eae7b3d.RData  rng_a42f6c9367113846cb25ae3b6eae7b3d.rdb  rng_e65cfb3762e74478ff7116d33fcd7ac8.RData  rng_e65cfb3762e74478ff7116d33fcd7ac8.rdb  rng_e65cfb3762e74478ff7116d33fcd7ac8.rdx
pkg/vignettes/scripts/: example.m
pkg/vignettes/src/: EddelbuettelGaujoux.Rnw  RJwrapper.Rnw  RcppOctave.Rnw
pkg/vignettes/unitTests/: doUnit.R  runit.eval.R  runit.stats.R
pkg/vignettes/vignettes/: RcppOctave.Rnw
www/: Octave-class.html  OctaveConfig.html  OctaveFunction-class.html  OctaveInterface.html  RcppOctave-package.html  _DEMOS.html  _MAN.html  _PAGE-FAQ.html  _REFERENCES.html  check.equal.html  demo-Kalman.html  demo-gamma.html  demo-gibbs.html  demo-timerng.html  dot-CallOctave.html  dot-DollarNames-commaOctave-method.html  index.html  mfiles.html  o_addpath.html  o_assign.html  o_clear.html  o_eval.html  o_exist.html  o_help.html  o_identity.html  o_load.html  o_ls.html  o_rexp.html  o_rgamma.html  o_rnorm.html  o_runif.html  o_source.html  o_version.html  o_who.html  o_whos.html  octave-ll.html  show-commaOctave-method.html  sourceExamples.html
