## Process this file with autoconf to produce a configure script.
##
## Configure.in for RcppOctave
##
## Borrowed and adapted from the file configure.in for RcppGSL
## Copyright (C) 2010 Romain Francois and Dirk Eddelbuettel
## Licensed under GNU GPL 2 or later
##
## Copyright (C) 2011 Renaud Gaujoux

# The version set here will propagate to other files from here
AC_INIT([RcppOctave], 0.4)

# Checks for common programs using default macros
AC_PROG_CC

## Use octave-config to find arguments for compiler and linker flags
##
## Check for non-standard programs: octave-config(1)
AC_PATH_PROG([OCTAVE_CONFIG], [octave-config])
## If octave-config was found, let's use it
if test "${OCTAVE_CONFIG}" != ""; then	
    # Use gsl-config for header and linker arguments
    OCTINCLUDEDIR=`${OCTAVE_CONFIG} -p OCTINCLUDEDIR`
    AC_MSG_RESULT([using Octave include directory ${OCTINCLUDEDIR}])	
    OCTLIBDIR=`${OCTAVE_CONFIG} -p OCTLIBDIR`
    AC_MSG_RESULT([using Octave library directory ${OCTLIBDIR}])
    
    # check Octave version to know whether one should infer output names:
    # it works for Octave >= 3.4.0
    OCTVERSION=`${OCTAVE_CONFIG} -p VERSION`
    OCT_POST_3_4_0=m4_version_compare([OCTVERSION], [3.4.0])    
    AC_MSG_RESULT([will infer Octave functions' output names ${OCT_POST_3_4_0}])
    
else
    AC_MSG_ERROR([octave-config not found, is Octave installed?])
fi

# Now substitute these variables in src/Makevars.in to create src/Makevars
AC_SUBST(OCTINCLUDEDIR)
AC_SUBST(OCTLIBDIR)
AC_SUBST(OCT_POST_3_4_0)

AC_OUTPUT(src/Makevars)