## Process this file with autoconf to produce a configure script.
##
## Configure.in for RcppOctave
##
## Borrowed and adapted from the file configure.in for RcppGSL
## Copyright (C) 2010 Romain Francois and Dirk Eddelbuettel
## Licensed under GNU GPL 2 or later
##
## Copyright (C) 2011 Renaud Gaujoux

# The version set here will propagate to other files from here
AC_INIT([RcppOctave], 0.6.1)

# Checks for common programs using default macros
AC_PROG_CC
AC_PROG_CXX
AC_LANG(C++)

## Use octave-config to find arguments for compiler and linker flags
##
## Check for non-standard programs: octave-config(1)
AC_PATH_PROG([OCTAVE_CONFIG], [octave-config])
## If octave-config was found, let's use it
if test "${OCTAVE_CONFIG}" != ""; then	
    # Use gsl-config for header and linker arguments
    AC_MSG_CHECKING([Octave include directory])
    OCTINCLUDEDIR=`${OCTAVE_CONFIG} -p OCTINCLUDEDIR`
    AC_MSG_RESULT([${OCTINCLUDEDIR}])
    
    AC_MSG_CHECKING([Octave library directory])
    OCTLIBDIR=`${OCTAVE_CONFIG} -p OCTLIBDIR`
    AC_MSG_RESULT([${OCTLIBDIR}])
        
    # check Octave version to know whether one should infer output names:
    # it works for Octave >= 3.4.3
    AC_MSG_CHECKING([Octave version])
    OCTVERSION=`${OCTAVE_CONFIG} -p VERSION`
    AC_MSG_RESULT([${OCTVERSION}])
    
    CMPV="3.4.3"
    AC_MSG_CHECKING([whether to infer output names for Octave function (>= ${CMPV})])
    AS_VERSION_COMPARE(${OCTVERSION}, ${CMPV}, [OCT_POST_3_4_0=-1], [OCT_POST_3_4_0=0], [OCT_POST_3_4_0=1])    
    AS_IF([test "${OCT_POST_3_4_0}" != "-1"], AC_MSG_RESULT([yes]), AC_MSG_RESULT([no]))
    
else
    AC_MSG_ERROR([octave-config not found, is Octave installed?])
fi

# Now substitute these variables in src/Makevars.in to create src/Makevars
AC_SUBST(OCTINCLUDEDIR)
AC_SUBST(OCTLIBDIR)
AC_SUBST(OCT_POST_3_4_0)

# Configure libRrng
#AC_CONFIG_SUBDIRS([src/modules])

AC_OUTPUT(src/Makevars)
